ARS_Sanitizer_Project_ws/log/build_2024-02-12_16-39-01/energy_nav/stderr.log
  File "/home/sebab/ARS_Sanitizer_Project/ARS_Sanitizer_Project_ws/install/energy_nav/lib/python3.10/site-packages/energy_nav/example_navigation.py", line 385
    start_button = tk.Button(root, text="Start Sanitization", command=lambda: start_sanitization(root), bg="green", fg="white"))
                                                                                                                               ^
SyntaxError: unmatched ')'

